<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connectiontest"
            android:icon="@mipmap/ic_connectiontest"
            android:title="@string/menu_connectiontest" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_update"
            android:icon="@mipmap/ic_update"
            android:title="@string/menu_update" />
    </group>



</menu>
